# SimpleRedis

./: CMakeLists.txt  client.cpp  main_client.cpp  main_server.cpp  parser.cpp  parser.h  server.cpp  server_client.h
src/: CMakeLists.txt  client.cpp  main_client.cpp  parser.h  server.cpp  server_client.h
test/: CMakeLists.txt  parser_test.cpp  test_server.cpp
